--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,6 @@
 {
     "python.defaultInterpreterPath": "${env:PYTHON}",
     "python.terminal.activateEnvironment": false,
-    "gitpod.experimental.portsView.enabled": true,
     "files.autoSave": "onFocusChange",
     "explorer.compactFolders": false,
     "git.autorefresh": true,
@@ -23,47 +22,45 @@
     "robotcode.robocop.enabled": false,
     "redhat.telemetry.enabled": false,
     "workbench.colorTheme": "Default Dark+",
-    "gitpod.openInStable.neverPrompt": true,
     "git.autofetch": true,
     "github.gitProtocol": "ssh",
     "files.trimTrailingWhitespace": true,
-    "githubPullRequests.createOnPublishBranch": "never",
     "git.enableSmartCommit": true,
     "git.confirmSync": false,
     "files.exclude": {
-        "**/.*": true,
-        "**/.vscode": true,
-        "LICENSE": true,
-        "requirements.txt": true,
-        "README.md": true,
-        "**/crypto_keys": true
+        "**/.*": false,
+        "**/.vscode": false,
+        "LICENSE": false,
+        "requirements.txt": false,
+        "README.md": false,
+        "**/crypto_keys": false
     },
     "workbench.iconTheme": "material-icon-theme",
-    "workbench.colorCustomizations": {
-        // "[Default Dark+]": {
-        //     "editor.background": "#0d0f14",
-        //     "terminal.background": "#000000",
-        //     "sideBar.background": "#0d0f14",
-        //     "sideBar.border": "#00936a",
-        //     "list.hoverBackground": "#00936a",
-        //     "list.hoverForeground": "#ffffff",
-        //     "list.activeSelectionForeground": "#ffffff",
-        //     "list.activeSelectionIconForeground": "#ffffff",
-        //     "menu.selectionForeground": "#ffffff",
-        //     "tab.inactiveBackground": "#0d0f14",
-        //     "tab.inactiveForeground": "#ffffff",
-        //     "tab.border": "#00936a",
-        //     "gitDecoration.modifiedResourceForeground": "#008Aff",
-        //     "gitDecoration.untrackedResourceForeground": "#aaaaaa",
-        //     "activityBar.activeBackground": "#00936a",
-        //     "activityBar.background": "#0d0f14",
-        //     "activityBar.inactiveForeground": "#ffffff",
-        //     "activityBar.border": "#00936a",
-        //     "debugConsole.warningForeground": "#0d0f14",
-        //     "debugConsole.sourceForeground": "#008Aff",
-        //     "terminal.foreground": "#ffffff",
-        //     "terminal.ansiGreen": "#00ff00",
-        //     "terminal.ansiRed": "#ff6600"
-        // }
-    },
+    // "workbench.colorCustomizations": {
+    //     "[Default Dark+]": {
+    //         "editor.background": "#0d0f14",
+    //         "terminal.background": "#000000",
+    //         "sideBar.background": "#0d0f14",
+    //         "sideBar.border": "#00936a",
+    //         "list.hoverBackground": "#00936a",
+    //         "list.hoverForeground": "#ffffff",
+    //         "list.activeSelectionForeground": "#ffffff",
+    //         "list.activeSelectionIconForeground": "#ffffff",
+    //         "menu.selectionForeground": "#ffffff",
+    //         "tab.inactiveBackground": "#0d0f14",
+    //         "tab.inactiveForeground": "#ffffff",
+    //         "tab.border": "#00936a",
+    //         "gitDecoration.modifiedResourceForeground": "#008Aff",
+    //         "gitDecoration.untrackedResourceForeground": "#aaaaaa",
+    //         "activityBar.activeBackground": "#00936a",
+    //         "activityBar.background": "#0d0f14",
+    //         "activityBar.inactiveForeground": "#ffffff",
+    //         "activityBar.border": "#00936a",
+    //         "debugConsole.warningForeground": "#0d0f14",
+    //         "debugConsole.sourceForeground": "#008Aff",
+    //         "terminal.foreground": "#ffffff",
+    //         "terminal.ansiGreen": "#00ff00",
+    //         "terminal.ansiRed": "#ff6600"
+    //     }
+    // },
 }
